[tool.poetry]
name = "tts"
version = "0.1.0"
description = "Text-to-Speech Streamlit App"
authors = ["Jana <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"  # Matches Python 3.13.4 from your Render log
streamlit = "^1.39.0"  # Latest Streamlit version as of Sep 2025
pyaudio = "^0.2.14"    # PyAudio version compatible with Python 3.13

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = 3.12
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
show_error_codes = true